skins/elastic/css/main.css
div[id$="_wrapper"] {
    display: none;
}

li.ddnotes_list_element {
    font-size: 1rem !important
}

li.ddnotes_list_element i {
    font-size: 1.25em;
    font-weight: 900;
}

li.ddnotes_list_element span.ddnotes_list_element_date {
    font-size: smaller;
}

li.ddnotes_list_element span.ddnotes_list_element_size {
    font-size: smaller;
}

#ddnotes_watermark {
    width: 100%;
    height: 100%;
    background: center/30% url("/skins/elastic/images/logo.svg") no-repeat #fff;
    background-blend-mode: luminosity;
}

#ddnotes_watermark::before {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: rgba(255, 255, 255, .85);
}

#ddnotes_note_content img {
    max-width: 100%;
    max-height: 100%;
}

#ddnotes_note_content {
    white-space: pre-wrap;
}

#ddnotes_note_content pre {
    /* css-3 */
    white-space: pre-wrap;
    /* Mozilla, since 1999 */
    white-space: -moz-pre-wrap;
    /* Opera 4-6 */
    white-space: -pre-wrap;
    /* Opera 7 */
    white-space: -o-pre-wrap;
    /* Internet Explorer 5.5+ */
    word-wrap: break-word;
}

#ddnotes_show_note_wrapper {
    width: 99%;
}

div.ddnotes_sticky_title {
    top: -1px;
    background-color: #fff;
}

div.TinyMDE {
    min-height: 300px;
    background-color: #f4f4f4;
}

